<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    style="@style/ScreenBackground"
    tools:context=".activities.SettingsActivity">

    <View
        android:id="@+id/headerBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/ScreenBackground"
        app:layout_constraintBottom_toTopOf="@id/viewSupporter"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:background="@drawable/background_icon"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/headerBackground"
        style="@style/backButtonTint"/>

    <TextView
        android:id="@+id/textSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        style="@style/textColorHeader"
        android:text="@string/setting"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/headerBackground"
        app:layout_constraintStart_toEndOf="@id/imageBack"
        app:layout_constraintTop_toTopOf="@id/headerBackground"/>

    <View
        android:id="@+id/viewSupporter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/chatBackground"
        android:layout_marginTop="12sp"
        app:layout_constraintTop_toBottomOf="@id/imageBack"/>

    <RelativeLayout
        android:id="@+id/layout_OpenAI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/viewSupporter">

        <TextView
            android:id="@+id/title_Openai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            style="@style/textColorHeader"
            android:text="@string/openai_api"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editText_OpenAI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:inputType="textPassword"
            android:hint="@string/insert_api_key_here"
            android:layout_below="@id/title_Openai"
            android:layout_toStartOf="@id/toggleView_OpenAI"
            android:layout_centerInParent="true"
            />

        <ImageButton
            android:id="@+id/toggleView_OpenAI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_eye"
            style="@style/ToggleEyeTint"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_Prodia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/layout_OpenAI">

        <TextView
            android:id="@+id/title_Prodia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            style="@style/textColorHeader"
            android:text="@string/prodia_api"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editText_Prodia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:inputType="textPassword"
            android:hint="@string/insert_api_key_here"
            android:layout_below="@id/title_Prodia"
            android:layout_toStartOf="@id/toggleView_Prodia"
            android:layout_centerInParent="true"
            />

        <ImageButton
            android:id="@+id/toggleView_Prodia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_eye"
            style="@style/ToggleEyeTint"/>

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:backgroundTint="@color/primary"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/layout_Prodia"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>