<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    style="@style/ScreenBackground"
    tools:context=".activities.SettingsActivity">

    <View
        android:id="@+id/headerBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/ScreenBackground"
        app:layout_constraintBottom_toTopOf="@id/viewSupporter"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:background="@drawable/background_icon"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/headerBackground"
        style="@style/backButtonTint"/>

    <TextView
        android:id="@+id/textSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        style="@style/textColorHeader"
        android:text="@string/setting"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/headerBackground"
        app:layout_constraintStart_toEndOf="@id/imageBack"
        app:layout_constraintTop_toTopOf="@id/headerBackground"/>

    <View
        android:id="@+id/viewSupporter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/chatBackground"
        android:layout_marginTop="12sp"
        app:layout_constraintTop_toBottomOf="@id/imageBack"/>

    <FrameLayout
        android:id="@+id/layoutImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewSupporter">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:background="@drawable/background_image"
            android:scaleType="centerCrop"
            app:riv_oval="true"/>

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@color/icon_background"
            android:src="@drawable/ic_camera"
            android:scaleType="centerCrop"
            app:riv_oval="true"
            android:layout_gravity="end|bottom"/>

    </FrameLayout>

    <TextView
        android:id="@+id/title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        style="@style/textColorHeader"
        android:text="Name"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutImage"/>

    <EditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/background_input"
        android:hint="@string/name"
        android:textColorHint="@color/secondary_text"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/title_name"/>

    <TextView
        android:id="@+id/title_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        style="@style/textColorHeader"
        android:text="Email"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputName"/>

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/background_input"
        android:hint="@string/email"
        android:textColorHint="@color/secondary_text"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/title_email"/>

    <TextView
        android:id="@+id/title_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        style="@style/textColorHeader"
        android:text="Password"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputEmail"/>

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/background_input"
        android:hint="@string/password"
        android:textColorHint="@color/secondary_text"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/title_password"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:backgroundTint="@color/primary"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>