<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    style="@style/ScreenBackground"
    tools:context=".activities.SettingsActivity">

    <View
        android:id="@+id/headerBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/ScreenBackground"
        app:layout_constraintBottom_toTopOf="@id/viewSupporter"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:background="@drawable/background_icon"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/headerBackground"
        style="@style/backButtonTint"/>

    <TextView
        android:id="@+id/textSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        style="@style/textColorHeader"
        android:text="@string/setting"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/headerBackground"
        app:layout_constraintStart_toEndOf="@id/imageBack"
        app:layout_constraintTop_toTopOf="@id/headerBackground"/>

    <View
        android:id="@+id/viewSupporter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/chatBackground"
        android:layout_marginTop="12sp"
        app:layout_constraintTop_toBottomOf="@id/imageBack"/>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageProfile"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="@drawable/background_image"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewSupporter"
        app:riv_corner_radius="@dimen/_8sdp"/>

    <TextView
        android:id="@+id/textName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        style="@style/textColorHeader"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageProfile"
        app:layout_constraintStart_toEndOf="@id/imageProfile"
        app:layout_constraintTop_toTopOf="@id/imageProfile"/>

    <RelativeLayout
        android:id="@+id/settingAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/imageProfile">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageAccount"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:background="@drawable/background_icon"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_account"
            style="@style/buttonTint"/>

        <TextView
            android:id="@+id/textSettingAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imageAccount"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            style="@style/textColorHeader"
            android:text="@string/account"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settingAPI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/settingAccount">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageKey"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:background="@drawable/background_icon"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_key"
            style="@style/buttonTint"/>

        <TextView
            android:id="@+id/textSettingAPI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imageKey"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            style="@style/textColorHeader"
            android:text="@string/api_key"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settingHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/settingAPI">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageTrash"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:background="@drawable/background_icon"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_delete"
            style="@style/buttonTint"/>

        <TextView
            android:id="@+id/textSettingChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imageTrash"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            style="@style/textColorHeader"
            android:text="@string/delete_history_chat"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/textLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="Log Out"
        style="@style/textColorFooter"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/settingHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>